# torchscope

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  report_from_csv.py
docs/: kubernetes_sidecar.md  nccl_tracing.md  ray_cluster_profiling.md
examples/: distributed_training.py  inference_server.py  training_loop.py  video_pipeline.py
integrations/: benchmark_adapter.py
tests/: test_cpu.py  test_k8s_sidecar.py  test_multi_gpu.py  test_nccl_collector.py  test_ray_profiler.py  test_single_gpu.py
torchscope/: __init__.py  analyzer.py  cli.py  nvtx.py  profiler.py  ray_profiler.py  tracer.py
torchscope/collectors/: __init__.py  comm.py  gpu.py  memory.py  nccl.py
torchscope/exporters/: __init__.py  html.py  json_log.py  prometheus.py
torchscope/k8s/: Dockerfile  sidecar.py
torchscope/k8s/helm/: Chart.yaml  values.yaml
torchscope/k8s/helm/templates/: deployment.yaml
