[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "torchscope"
version = "0.1.0"
description = "PyTorch GPU observability toolkit — cluster-scale telemetry, NCCL tracing, and Kubernetes sidecar"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Yash Jain"}]
dependencies = [
    "plotly>=5.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
nvml       = ["pynvml>=11.0"]
prometheus = ["prometheus-client>=0.17"]
ray        = ["ray[train]>=2.0"]
k8s        = ["kubernetes>=26.0"]
full       = [
    "pynvml>=11.0",
    "prometheus-client>=0.17",
    "plotly>=5.0",
    "jinja2>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
torchscope         = "torchscope.cli:main"
torchscope-sidecar = "torchscope.k8s.sidecar:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchscope*"]
